samples/_failures_safe/1761360847_236aa1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92963e9c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_92963e9c.c:192:12: error: missing terminating " character
  192 |     printf("Dijkstra distances from vertex %d:\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_92963e9c.c:192:5: error: expected expression at end of input
  192 |     printf("Dijkstra distances from vertex %d:\n
      |     ^~~~~~
./samples/SAFE/__tmp_92963e9c.c:192:5: error: expected declaration or statement at end of input
